--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
                     <button>Get Started</button>
                 </div>
                 <div class="image-wrapper">
-                    <img src="./img green.svg" alt="">
+                    <img src="./img green.svg" alt=".">
                 </div>
             </div>
         </div>
